# human-in-the-loop-sdk

./: AGENT.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: HOMEBREW.md
src/human_in_the_loop_sdk/: __init__.py  cli.py  core.py
tests/: test_core.py
