[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "human-in-the-loop-sdk"
version = "0.1.0"
description = "Standalone SDK for approval gates, escalation triggers, and review queues."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "erron.ai"}]
dependencies = []

[project.urls]
Homepage = "https://github.com/erron-ai/human-in-the-loop-sdk"
Issues = "https://github.com/erron-ai/human-in-the-loop-sdk/issues"

[project.scripts]
human-in-the-loop-sdk = "human_in_the_loop_sdk.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
